--- a/Sprites/Intro.html
+++ b/Sprites/Intro.html
@@ -47,7 +47,8 @@
                 </p>
             </section>
             <p>
-                <a href="../downloads/ZeneSprites.zip" download>Download</a> commit <a href="https://github.com/Me222282/ZeneLibrary/tree/c97b53525b/Sprites" target="_blank" rel="noopener noreferrer">c97b535</a>
+                <a href="../downloads/ZeneSprites.zip" download>Download</a> commit
+                <a href="https://github.com/Me222282/ZeneSprites/tree/e5dba73a9ac23511dfdce1273fdd9654c4111f92" target="_blank" rel="noopener noreferrer">e5dba73</a>
             </p>
         </main>
         
