--- a/GUI/Intro.html
+++ b/GUI/Intro.html
@@ -47,7 +47,8 @@
                 </p>
             </section>
             <p>
-                <a href="../downloads/ZeneGUI.zip" download>Download</a> commit <a href="https://github.com/Me222282/ZeneLibrary/tree/c97b53525b/GUI" target="_blank" rel="noopener noreferrer">c97b535</a>
+                <a href="../downloads/ZeneGUI.zip" download>Download</a> commit
+                <a href="https://github.com/Me222282/ZeneGUI/tree/652b3886d0aded3bc04bd71bfb99a17b98e62a7e" target="_blank" rel="noopener noreferrer">652b388</a>
             </p>
         </main>
         
