--- a/Physics/Intro.html
+++ b/Physics/Intro.html
@@ -47,7 +47,8 @@
                 </p>
             </section>
             <p>
-                <a href="../downloads/ZenePhysics.zip" download>Download</a> commit <a href="https://github.com/Me222282/ZeneLibrary/tree/c97b53525b/Physics" target="_blank" rel="noopener noreferrer">c97b535</a>
+                <a href="../downloads/ZenePhysics.zip" download>Download</a> commit
+                <a href="https://github.com/Me222282/ZenePhysics/tree/21bf2060a91c6f9fc5f20225c577ffddc9488c8d" target="_blank" rel="noopener noreferrer">21bf206</a>
             </p>
         </main>
         
