--- a/Structs/Intro.html
+++ b/Structs/Intro.html
@@ -66,12 +66,14 @@
             <section>
                 <h2 class="hidden">Description</h2>
                 <p>
-                    The Zene Structs Library is a collection of <a href="https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/language-specification/structs" style="font-weight:500" target="_blank" rel="noopener noreferrer">c# structs</a>
+                    The Zene Structs Library is a collection of
+                    <a href="https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/language-specification/structs" style="font-weight:500" target="_blank" rel="noopener noreferrer">c# structs</a>
                     that represent/manage geometric objects and values. It is the base for the rest of The Zene Library.
                 </p>
             </section>
             <p>
-                <a href="../downloads/ZeneStructs.zip" download>Download</a> commit <a href="https://github.com/Me222282/ZeneLibrary/tree/c97b53525b/Structs" target="_blank" rel="noopener noreferrer">c97b535</a>
+                <a href="../downloads/ZeneStructs.zip" download>Download</a> commit
+                <a href="https://github.com/Me222282/ZeneStructs/tree/02a8e3dacdc1d0c0596ba4fe2be152058e264865" target="_blank" rel="noopener noreferrer">02a8e3d</a>
             </p>
         </main>
         
